2015-01-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c (WritePNMImage): Fix overwrite of status by
	progress monitor.  Remaining issues may lurk within.  May resolve
	Coverity CID 10288.

	* coders/pdb.c: Resolve Coverity CID 11173 "Buffer not null
	terminated".

2015-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (GetMagickInfoArray): Resolve Coverity CID 10212
	"Missing unlock".

	* magick/colormap.c (ReplaceImageColormap): Allocate new image
	colormap up front in order to avoid the possibility that we are
	left with an image with no colormap due to memory allocation
	failure. If there is a memory allocation failure, then the
	original colormap is preserved.  Resolves Coverity CID 10194
	"Dereference after null check".

	* magick/utility.c (MagickStripSpacesFromString): New private
	utility function to strip spaces from a string.

	* magick/color_lookup.c (GetColorInfoArray): Resolves Coverity CID
	10231 "Missing unlock"
	(ReadColorConfigureFile): Resolves Coverity CID 10261 "Use of
	untrusted scalar value"
	(GetColorInfo): Resolves Coverity CID 10077 "Overlapping buffer in
	memory copy".

2015-01-21  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): Use png_error() instead of
	throwing an exception so cleanup in the setjmp block can happen,
	including unlocking the semaphore.  Resolves Coverity CID 10232.

	* coders/png.c (ReadOnePNGImage): Moved a logging statement into a
	block where "attribute" has been checked for NULL.  Resolves
	Coverity CID 10187.

	* coders/png.c (ReadMNGImage): Fixed a cut-and-paste typo
	(change_delay should be change_timeout) reported by Coverity
	CID 10090.

2015-01-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (CloneImage): The definition is poor as to what a
	non-orphan clone should do.  However, the definition surely does
	not include crashing the software or supplanting the original