@@ -38,6 +38,11 @@
 <p>2015-01-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/dib.c (ReadDIBImage): Resolve Coverity CID 10228 &quot;Integer
+overflowed argument&quot;.
+(ReadDIBImage): Hopefully resolve Coverity CID 10268 &quot;Various&quot;,
+which is primarily about placing too much trust in the claimed
+number of colors.</li>
 <li>coders/pnm.c (WritePNMImage): Fix overwrite of status by
 progress monitor.  Remaining issues may lurk within.  May resolve
 Coverity CID 10288.</li>
